# getbetter.ro

./: .drone.yaml  .gitignore  .gitmodules  Dockerfile  Makefile  Pipfile  main.py  mkdocs.yml  pelicanconf.py  publishconf.py  pyproject.toml  renovate.json  requirements.txt  server.py  setup.cfg  setup.py
content/: .pages  2010-02-03-link-separator-for-wp_list_pages.md  2011-04-21-wordpress-hooks-user-register.md  2019-05-31-biking-the-mosel-palatinate.md  2019-06-10-head-in-the-clouds-of-amsterdam-and-utrecht.md  2019-07-15-luz-azul-de-lisboa.md  2019-07-30-intense-london-calling.md  2019-08-05-biking-to-trosa-gnesta.md  2020-02-01-stockholm-tunnel-rave.md  2020-03-04-setting-up-a-haskell-environment-with-stack-ghcid-and-intellij.md  index.md
content/archive/: 2010-02-03-link-separator-for-wp_list_pages.md  2010-02-04-default-wordpress-settings.md  2010-11-23-add-a-class-to-wp_nav_menu-items-with-urls-included-in-the-current-url.md  2011-04-13-send-out-custom-tweets-from-wordpress-using-twitter-tools.md  learning-to-learn.md
content/archive/climbing/: .pages  course.md  warmup.md
content/archive/wp/: .pages  2010-02-04-default-wordpress-settings.md  2010-11-23-add-a-class-to-wp_nav_menu-items-with-urls-included-in-the-current-url.md  2011-04-13-send-out-custom-tweets-from-wordpress-using-twitter-tools.md  2011-04-21-wordpress-hooks-user-register.md
content/assets/: gallery.js  gfonts.css  macros.css
content/assets/javascripts/: gallery.js  plausible.js
content/assets/stylesheets/: gfonts.css  macros.css
content/climbing/: circuit_exercises.md
content/extra/: videobox.css
content/journal/: .pages  2019-05-31-biking-the-mosel-palatinate.md  2019-06-10-head-in-the-clouds-of-amsterdam-and-utrecht.md  2019-07-15-luz-azul-de-lisboa.md  2019-07-30-intense-london-calling.md  2019-08-05-biking-to-trosa-gnesta.md  2020-02-01-stockholm-tunnel-rave.md  2020-03-04-setting-up-a-haskell-environment-with-stack-ghcid-and-intellij.md  2020-04-17-tyresta-hike.md  2020-05-25-hiking-progress.md  2020-06-27-alsvik.md  2020-07-27-alsvik.md  2020-08-04-kebnekeise-kungsleden-abisko.md  2020-08-20-valadalen.md  2020-09-03-the-quest-for-old-tjikko.md  2021-08-18-chris-wedding.md  2022-07-26-sonfjällets-summit-norway-drivethrough.md  2022-08-17-tour-de-mont-blanc.md
content/learning/: learning-to-learn.md
content/linux/: rsync-tricks.md  running-old-packages-on-arch.md
content/list-of-lists/: index.md
content/ops/: 12-factor-apps.md
content/pages/: about.md  arch-running-old-packages.md  climbing-circuit.md  climbing-course.md  climbing-warmup.md  learning-to-learn.md  projects.md  work.md
content/projects/: epok.md  index.md  lux.md  mobilize.md  tendril.md
content/tech/: .pages  12-factor-apps.md  displaying-current-focus-in-i3.md  hybrid-cloud-federation-gcp-to-aws.md  migrate-to-ecr.md  rsync-tricks.md  running-old-packages-on-arch.md  setting-up-a-haskell-environment-with-stack-ghcid-and-intellij.md  tunnel-colocated-services-openvpn.md
docker/: Dockerfile  Dockerfile-builder
docker/hacks/: builder-version.sh  project-version.sh
gb/: youtube.py
getbetter/: fs.py  fun.py  gallerize.py  macros.py  server.py  watch.py
hacks/: cache-bust-extras.sh  gallerize-entrypoint.sh  gallerize.sh
plugins/liquid_tags/: getbetter.py  youtube.py
plugins/photos/: gallery_tag.py  photos.py
(+11 files in other folders)
