[tool.poetry]
name = "getbetter"
version = "0.1.0"
description = "supporting code for mkdocs generation of getbetter.ro"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
devtools = "^0.12.0"
htmlmin = {git = "https://github.com/rarescosma/htmlmin.git", rev = "dca6ed24ead9dc0422fb7ce3ab6af11d8206f49b"}
mkdocs = "^1.4"
markdown-include = "==0.8.1"
mkdocs-exclude = "^1"
mkdocs-git-revision-date-plugin = "^0.3"
mkdocs-macros-plugin = "^1.0"
mkdocs-material = "^9.0.0-beta.4"
mkdocs-material-extensions = "^1.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-exclude-search = "^0.6.0"
mkdocs-include-dir-to-nav = "^1.2.0"
pymdown-extensions = "^10.0"
mkdocs-awesome-pages-plugin = {git = "https://github.com/rarescosma/mkdocs-awesome-pages-plugin.git", rev = "2788b3709f8dd0285e14d86a251b7e68c7020720"}
Pygments = "^2.13"
Markdown = "^3.3"
sh = "^2.0"
pyinotify = "^0.9.6"
pyasyncore = "^1.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gallerize = { callable = "getbetter.gallerize:main" }
